show this project is at the point where I was trying to print the foodLevel every second to the dom. That was successful. now trying to figure out how to have it stop at 0 and have button functionality

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" src="bundle.js"></script>
-  <title>Document</title>
+  <title>Feed the Bear</title>
 </head>
-<body>
-
-</body>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Feed The Bear</h1>
+      </div>
+      <section>
+        <p id="timer"></p>
+        <button class="btn btn-class" id="feed-the-bear">Feed Bear</button>
+        <button type="button" class="btn btn-class" id="restart">Restart</button>
+      </section>
+    </div>
+  </body>
 </html>
